@@ -1,3 +1,10 @@
+2014-01-09  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[pq] Fix bug: Make ‘pg-result-error-field’ DTRT.
+
+	* basic.scm (test:known-bad-command):
+	Test ‘pg-result-error-field’ rv explicitly.
+
 2014-01-08  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	Drop procs: pg-{getline,getlineasync,putline,endcopy}
